KRSupdated_09122021/force-app/main/default/objects/Product_Variant__c/Product_Variant__c.object-meta.xml
<CustomObject>
    <label>Product Variant</label>
    <nameField>
        <label>Product Variant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Variants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>