KRSupdated_09122021/force-app/main/default/objects/Product_Variant__c/fields/Discription__c.field-meta.xml
<CustomField>
    <fullName>Discription__c</fullName>
    <label>Discription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>