KRSupdated_09122021/force-app/main/default/objects/Product_Variant__c/fields/Kids_Size__c.field-meta.xml
<CustomField>
    <fullName>Kids_Size__c</fullName>
    <label>Kids Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-6M</fullName>
            </value>
            <value>
                <fullName>6M-1Y</fullName>
            </value>
            <value>
                <fullName>1-2Y</fullName>
            </value>
            <value>
                <fullName>2-3Y</fullName>
            </value>
            <value>
                <fullName>3-4Y</fullName>
            </value>
            <value>
                <fullName>4-5Y</fullName>
            </value>
            <value>
                <fullName>5-6Y</fullName>
            </value>
            <value>
                <fullName>6-7Y</fullName>
            </value>
            <value>
                <fullName>7-8Y</fullName>
            </value>
            <value>
                <fullName>8-9Y</fullName>
            </value>
            <value>
                <fullName>9-10Y</fullName>
            </value>
            <value>
                <fullName>10-11Y</fullName>
            </value>
            <value>
                <fullName>11-12Y</fullName>
            </value>
            <value>
                <fullName>12-13Y</fullName>
            </value>
            <value>
                <fullName>13-14Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>