KRSupdated_09122021/force-app/main/default/objects/Product_Variant__c/fields/Option_2_Label__c.field-meta.xml
<CustomField>
    <fullName>Option_2_Label__c</fullName>
    <label>Option 2 Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Size</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>