KRSupdated_09122021/force-app/main/default/objects/Product_Variant__c/fields/Option_2_Value__c.field-meta.xml
<CustomField>
    <fullName>Option_2_Value__c</fullName>
    <label>Option 2 Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>