KRSupdated_09122021/force-app/main/default/objects/Product_Variant__c/fields/Product_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Product_Picklist__c</fullName>
    <label>Product Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shirt</fullName>
            </value>
            <value>
                <fullName>Saree</fullName>
            </value>
            <value>
                <fullName>Pant</fullName>
            </value>
            <value>
                <fullName>T-Shirt</fullName>
            </value>
            <value>
                <fullName>Jeans</fullName>
            </value>
            <value>
                <fullName>Leggings</fullName>
            </value>
            <value>
                <fullName>Duppatta</fullName>
            </value>
            <value>
                <fullName>Tops</fullName>
            </value>
            <value>
                <fullName>Lehanga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>