KRSupdated_09122021/force-app/main/default/objects/Product_Variant__c/fields/Women_Size__c.field-meta.xml
<CustomField>
    <fullName>Women_Size__c</fullName>
    <label>Women Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>XXL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>