KRSupdated_09122021/force-app/main/default/objects/Product_Variant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Image_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>