KRSupdated_09122021/force-app/main/default/objects/Product_Variant__c/listViews/new_list_view.listView-meta.xml
<ListView>
    <fullName>new_list_view</fullName>
    <columns>NAME</columns>
    <columns>Image_URL__c</columns>
    <filterScope>Mine</filterScope>
    <label>new list view</label>
</ListView>